--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html>
 <head>
 	<title>Snake game</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<canvas id="game" width="800" height="600"></canvas>
-	<div>
-		Points: <label id="points">0</label>
+	<div class="content">
+		<canvas id="game" width="800" height="600"></canvas>
+		<div>
+			Points: <label id="points">0</label>
+		</div>
+		<div>Reuel Jonathan - 2014</div>
 	</div>
+
 </body>
 
 
