--- a/index2.html
+++ b/index2.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Reuel Jonathan - Portfolio</title>
+	<title>Snake game</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div id="menu" class="text-right">
-		<a href="#"><div>Home</div></a>
-		<a href="#"><div>Arts</div></a>
-		<a href="#"><div>Games</div></a>
-		<a href="#"><div>Contact</div></a>
+	<div id="menu">
+		
 	</div>
-
-	<div id="home" class="screen">Welcome to my website </div>
+	<div class="content">
+		<canvas id="game" width="800" height="600"></canvas>
+		<div>
+			Points: <label id="points">0</label>
+		</div>
+		<div>Reuel Jonathan - 2014</div>
+	</div>
 
 </body>
 
