--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<div id="home" class="screen">
 		<h1>Welcome!</h1> 
-
+		<?php echo "hey!"; ?>
 		<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
