--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
 	<div id="home" class="screen">
 		<h1>Welcome!</h1> 
-		<?php echo "hey!"; ?>
 		<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -38,22 +37,33 @@
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
 	</div>
 
+	<div id="arts" class="screen screen-active">
+		<h1>ARTS</h1> 
+		<div id="photoShower" >
+			<div id="imageDiv" >
+				
+			</div>
+		</div>
+	</div>
+
+	<footer class="text-center">Reuel Jonathan - 2014</footer>
+
 </body>
 
 
 <script type="text/javascript" src="js/gamvas.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/mainSite.js"></script>
 
 
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  /*(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-47696905-1', 'reueljonathan.github.io');
   ga('send', 'pageview');
-
+*/
 </script>
 
 </html>
