--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<title>Reuel Jonathan - Portfolio</title>
@@ -6,43 +6,52 @@
 </head>
 <body>
 	<div id="menu" class="text-right">
-		<a href="#"><div>Home</div></a>
-		<a href="#"><div>Arts</div></a>
-		<a href="#"><div>Games</div></a>
-		<a href="#"><div>Contact</div></a>
+		<a href="#" id="homeButton"><div>Home</div></a>
+		<a href="#" id="artsButton"><div>Arts</div></a>
+		<a href="#" id="gamesButton"><div>Games</div></a>
+		<a href="#" id="contactButton"><div>Contact</div></a>
 	</div>
 
-	<div id="home" class="screen">
-		<h1>Welcome!</h1> 
-		<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+	<div id="home" class="screen screen-active">
+		<div class="text-center"><h1>Welcome!</h1></div>
+		<div><p>Welcome to my digital portfolio. I'm Reuel Jonathan, 18, and I'm a Computer Science student at UFPE (Universidade Federal de Pernambuco / <i>Pernambuco Federal Highschool</i>). I also have a technical course in Design for Digital Games, by NAVE-Recife (Cícero Dias). Here I'll show some of my works and earnings in these few years of carrer. Enjoy and	fell free to contact me. :D
+			</p></div>
 	</div>
 
-	<div id="arts" class="screen screen-active">
+	<div id="arts" class="screen">
 		<h1>ARTS</h1> 
 		<div id="photoShower" >
-			<div id="imageDiv" >
-				
+			<div id="imageDiv" >				
 			</div>
+		</div>
+	</div>
+
+	<div id="games" class="screen">
+		<h1>GAMES</h1> 
+		<div>
+			<iframe src="gameTest.html"></iframe>
+		</div>
+		<div id="photoShower" >
+			<div id="imageDiv" >				
+			</div>
+		</div>
+	</div>
+
+	<div id="contact" class="screen">
+		<h1>CONTACT</h1> 
+		<div class="text-center">
+			<p>
+				Feel free to contact me. :D
+			</p>
+			<p>
+				<span class="bold">E-mail:</span> reuel.jonathan@gmail.com
+			</p>
+			<p>
+				<span class="bold">Linkedin:</span> <a href="#">/reueljonathan</a>
+			</p>
+			<p>
+				<span class="bold">Twitter:</span> <a href="#">@rjjonathan</a>
+			</p>
 		</div>
 	</div>
 
