--- a/cyberpunk/index.html
+++ b/cyberpunk/index.html
@@ -7,7 +7,8 @@
 <body>
 	<div id="menu" class="screen-true">
 		<div class="center">
-			<div id="title" class="title"><span class="title">Way Out</span></div>
+			<div id="title"><span class="title">Way Out</span>
+				<div class="center small">beta version</div></div>
 			<div id="buttons">
 				<div><button id="playBtn">Play</button></div>
 				<div><button id="infoBtn">Instructions</button></div>
@@ -79,6 +80,7 @@
 	
 	<script src="js/main.js"></script>
 	<script src="js/gamvas.js"></script>
+	<script src="js/particles/test.js"></script>
 	<script src="js/uniqueAnimation.js"></script>
 	<script src="js/actors/door.js"></script>
 	<script src="js/actors/ground.js"></script>
