--- a/cyberpunk/index.html
+++ b/cyberpunk/index.html
@@ -36,9 +36,9 @@
 		<div id="hud">
 			<table>
 				<tr>
-					<td class="left">Player 1: <span id="score">100</span>%</td>
-					<td id="time" class="center"></td>
-					<td class="right">Player 2: <span id="score">100</span>%</td>
+					<td class="left">Player 1: <span id="hp1">100</span>%</td>
+					
+					<td class="right">Player 2: <span id="hp2">100</span>%</td>
 				</tr>
 			</table>
 		</div>	
