--- a/puzzle_line/index.html
+++ b/puzzle_line/index.html
@@ -15,10 +15,11 @@
 		</div>
 		<div class="screen center" id="game">
 			<div id="rules">
-				Use the mouse to change the circles positions, and do horizontal or vertical lines with four circles of the same color in the light square to make points.
+				Click/touch on circles to change its positions, and do horizontal or vertical lines with four circles of the same color in the light square to make points.
 			</div>
-			<div id="gameCanvas">
-				<canvas id="c" width="600" height="600"></canvas>
+			<div id="gameCanvas" class="center">				
+				<canvas id="c" width="480" height="480"></canvas>
+				<div id="level" class="title">LEVEL 2</br> "It's so easy!"</div>
 			</div>
 			<div id="hud" class="center">
 				TIME:<span id="time"></span>
