--- a/puzzle_line/index.html
+++ b/puzzle_line/index.html
@@ -19,7 +19,7 @@
 			</div>
 			<div id="gameCanvas" class="center">				
 				<canvas id="c" width="480" height="480"></canvas>
-				<div id="level" class="title">LEVEL 2</br> "It's so easy!"</div>
+				<div id="level" class="title">LEVEL 1</br> "The begin"</div>
 			</div>
 			<div id="hud" class="center">
 				TIME:<span id="time"></span>
