--- a/puzzle_line/index.html
+++ b/puzzle_line/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, user-scalable=no">
+	<meta name="description" content="A puzzle game for those who have fast fingers! Avaliable on Google Play, Windows Phone store, 
+		Windows 8 Store, Firefox OS Marketplace, PC and Linux"
 	<title>Puzzle Line</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/transitions.css">
+	<style type="text/css">
+		/*canvas{
+			width: 100%;
+			height: 100%;
+			max-width: 480px;
+			max-height: 480px;
+		}*/
+	</style>
 </head>
 <body>
 	<div id="gameDiv">
@@ -15,12 +25,9 @@
 			</div>			
 		</div>
 		<div class="screen center" id="game">
-			<div id="rules">
-				Click/touch on circles to change its positions, and do horizontal or vertical lines with four circles of the same color in the light square to make points.
-			</div>
+			
 			<div id="gameCanvas" class="center">				
-				<canvas id="c" width="480" height="480"></canvas>
-				<div id="level" class="title">LEVEL 1</br> "The begin"</div>
+				<canvas id="c" width="480" height="4800"></canvas>
 			</div>
 			<div id="hud" class="center">
 				TIME:<span id="time"></span>
