Start create new portfolio

--- a/index.html
+++ b/index.html
@@ -1,60 +1,99 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Reuel Jonathan - Portfolio</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>Reuel Jonathan</title>
 </head>
+
+
 <body>
-	<div id="menu" class="text-right">
-		<a href="#"><div>Home</div></a>
-		<a href="#"><div>Arts</div></a>
-		<a href="#"><div>Games</div></a>
-		<a href="#"><div>Contact</div></a>
+	<div class="container">
+		<div class="navigation text-right">
+			<div class="header padding-10">
+				Reuel</br>Jonathan
+			</div>
+			<!-- <div class="about padding-10">
+				<h3>About</h3>
+				I'm am a 21 yo developer from brazil.
+			</div>
+			<div class="menu">
+			</div> -->
+
+			<nav class="padding-10">
+				<a href="#">About</a>
+				<a href="#">Art</a>
+				<a href="#">Games</a>
+				<a href="#">Music</a>
+			</nav>
+		</div>
+		<div class="content">
+			<div class="padding-10">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</div>
+
+			<div class="skills-table padding-10">
+				<table>
+					<tr>
+						<td class="text-right"> Html5</td>        
+						<td class="skill good">||||||||||</td>
+					</tr>
+					<tr>
+						<td class="text-right"> CSS3</td>         
+						<td class="skill good">||||||||</td>
+					</tr>
+					<tr>
+						<td class="text-right"> JavaScript</td>   
+					  	<td class="skill good">|||||||||</td>
+					</tr>
+					<tr>
+						<td class="text-right"> C</td>            
+					  	<td class="skill low">|||</td>
+					</tr>
+					<tr>
+						<td class="text-right"> C++</td>     
+					  	<td class="skill low">|</td>
+					</tr>
+					<tr>
+						<td class="text-right"> Java</td>         
+					  	<td class="skill medium">|||||</td>
+					</tr>
+					<tr>
+						<td class="text-right"> Lua</td>          
+					  	<td class="skill medium">|||||</td>
+					</tr>
+					<tr>
+						<td class="text-right"> Python</td>       
+					  	<td class="skill low">||</td>
+					</tr>
+
+
+				</table>
+			</div>
+		</div>
 	</div>
-
-	<div id="home" class="screen">
-		<h1>Welcome!</h1>
-		<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-	</div>
-
-	<footer class="text-center">Reuel Jonathan - 2014</footer>
-
 </body>
-
-
-<script type="text/javascript" src="js/gamvas.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
-
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-47696905-1', 'reueljonathan.github.io');
-  ga('send', 'pageview');
-
-</script>
-
 </html>
