--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<div class="container">
-		<div class="navigation text-right">
+		<div class="navigation">
 			<div class="header padding-10">
 				Reuel</br>Jonathan
 			</div>
