--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="theme-color" content="#000F19" />
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Reuel Jonathan</title>
 </head>
