--- a/index.html
+++ b/index.html
@@ -28,73 +28,11 @@
 				<a href="#">Music</a>
 			</nav>
 		</div>
-		<div class="content">
-			<div class="padding-10">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</div>
-
-			<div class="skills-table padding-10">
-				<table>
-					<tr>
-						<td class="text-right"> Html5</td>        
-						<td class="skill good">||||||||||</td>
-					</tr>
-					<tr>
-						<td class="text-right"> CSS3</td>         
-						<td class="skill good">||||||||</td>
-					</tr>
-					<tr>
-						<td class="text-right"> JavaScript</td>   
-					  	<td class="skill good">|||||||||</td>
-					</tr>
-					<tr>
-						<td class="text-right"> C</td>            
-					  	<td class="skill low">|||</td>
-					</tr>
-					<tr>
-						<td class="text-right"> C++</td>     
-					  	<td class="skill low">|</td>
-					</tr>
-					<tr>
-						<td class="text-right"> Java</td>         
-					  	<td class="skill medium">|||||</td>
-					</tr>
-					<tr>
-						<td class="text-right"> Lua</td>          
-					  	<td class="skill medium">|||||</td>
-					</tr>
-					<tr>
-						<td class="text-right"> Python</td>       
-					  	<td class="skill low">||</td>
-					</tr>
-
-
-				</table>
-			</div>
+		<div class="content" id="content">
+			
 		</div>
 	</div>
+
+	<script src="js/index.js"></script>
 </body>
 </html>
