Create simple node server for testing, and template pages

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 			</div> -->
 
 			<nav class="padding-10">
-				<a href="#">About</a>
-				<a href="#">Art</a>
-				<a href="#">Games</a>
-				<a href="#">Music</a>
+				<a class="nav-link" href="/about">About</a>
+				<a class="nav-link" href="/art">Art</a>
+				<a class="nav-link" href="/games">Games</a>
+				<a class="nav-link" href="/music">Music</a>
 			</nav>
 		</div>
 		<div class="content" id="content">
