Take some  things out

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<a class="nav-link" href="/about">About</a>
 				<a class="nav-link" href="/art">Art</a>
 				<a class="nav-link" href="/games">Games</a>
-				<a class="nav-link" href="/music">Music</a>
+				<!-- <a class="nav-link" href="/music">Music</a> -->
 			</nav>
 		</div>
 		<div class="content" id="content">
