--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,8 @@
 <div class="padding-10">
-	This is an about page
+	(Under development): This is an about page. </br>
+    I am a 22 y.o. developer
 </div>
-
+<!--
 <div class="skills-table padding-10">
 	<table>
 		<tr>
@@ -39,4 +40,4 @@
 
 
 	</table>
-</div>
+</div>-->
