Change more things

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 			<nav class="padding-10">
 				<a class="nav-link" href="/about">About</a>
-				<a class="nav-link" href="/art">Art</a>
-				<a class="nav-link" href="/games">Games</a>
+			<!--	<a class="nav-link" href="/art">Art</a> -->
+				<a class="nav-link" href="/programming">Programming</a>
 				<!-- <a class="nav-link" href="/music">Music</a> -->
 			</nav>
 		</div>
