Fixes cursor on chrome

--- a/pages/about.html
+++ b/pages/about.html
@@ -23,5 +23,5 @@
         </br>
     </p>
     
-    <p><span class="terminal-cursor"><span class="terminal-user">reuel</span>:<span class="terminal-tilde">~</span>$ </span></p>
+    <p><span class="terminal-user">reuel</span>:<span class="terminal-tilde">~</span>$ <span class="terminal-cursor">|</span></p>
 </div>
