Update functions description

--- a/pages/programming.html
+++ b/pages/programming.html
@@ -11,7 +11,7 @@
     <ul>
         <li>A little game (prototype) where you play with the graph of functions</li>
         <li>Technologies used: HTML5, CSS3, JS</li>
-        <li>Demo <a href="http://reueljonathan.github.io/functions-game" target="_blank">here</a> (Works better on browser)</li>
+        <li>Demo <a href="http://reueljonathan.github.io/functions-game" target="_blank">here</a> (Works better on desktop)</li>
     </ul>
     <p>
         <b>That Memory Game</b>
