--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#000F19" />
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<title>Reuel Jonathan</title>
 </head>
 
