--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#000F19" />
+	<meta name="description" content="Reuel Jonathan, Software Developer, Full stack developer" />
+	<meta name="author" content="Reuel Jonathan">
+	<meta name="keywords" content="JS, CSS, HTML, JavaScript, Angular, React, Developer, Programmer, Software Engineer"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-	<title>Reuel Jonathan</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+	<title>Reuel Jonathan - Software Developer</title>
 </head>
 
 
