--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,16 @@
          body{
             margin: 0;
             background: #292f36;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
          }         
+
+         /* create media queries here */
+
+         #root{
+            width: 1024px;
+         }
       </style>
    </head>
    <body>
