--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,18 @@
          /* create media queries here */
 
          #root{
-            width: 1024px;
+            max-width: 800px;
+            padding: 0 1em;
+            margin-bottom: 2em;
+         }
+
+         @keyframes appear{
+            from {
+               opacity: 0;
+            }
+            to{
+               opacity: 1;
+            }
          }
       </style>
    </head>
