--- a/404.html
+++ b/404.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta http-equiv="refresh" content="0;URL='/'"></meta>
+  </head>
   <body>
+    <!-- IE required at least 512 bytes of data to show non-default 404. -->
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   </body>
   <script>
     window.location = '/';
