Create new version with no frameworks and simpler layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,117 @@
-<!DOCTYPE html><html lang="en"><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Reuel Jonathan</title><style>@font-face{font-family:RedHatDisplay;src:url(/RedHatDisplay-Regular.823397f7.ttf);font-display:swap}body{margin:0}#root{display:flex;flex-direction:column;align-items:center}</style></head><body> <div id="root"></div> <script src="/src.4ee382ef.js"></script> <script>var o=window.location;""!==o.hash?history.pushState(null,null,o.hash.slice(1)):(console.log(window.location.path),history.pushState(null,null,"/about"),console.log("passou"));</script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Reuel Jonathan - Software Developer">
+    <title>Reuel Jonathan</title>
+    <link href="style.css" rel="stylesheet">
+  </head>
+  <body>
+    <div id="content" class="w-800 border-1px border-black pt-1em ps-2em">
+      <!--
+      <h1>Reuel Jonathan</h1>
+      <h2>Reuel Jonathan</h2>
+      <h3>Reuel Jonathan</h3>
+      <h4>Reuel Jonathan</h4>
+      <h5>Reuel Jonathan</h5>
+      <h6>Reuel Jonathan</h6>
+      -->
+      <section id="header" class="mb-2-em">
+        <h1>Reuel Jonathan</h1>
+        <h2>Software Developer</h2>
+      </section>
+
+      <section>
+        <h3 class="bold">About</h3>
+        <div>
+          <p>
+            Hi! My name is Reuel Jonathan, and I am a software developer based on Brazil.
+          </p>
+          <p>
+            I started my career at 17 as an apprentice developer. Since there I passed through many projects of
+            different types: Web applications, embedded applications and desktop applications.
+          </p>
+          <p>
+            I consider myself a developer of generalist profile, so I try to know at least a little about many things,
+            and it has helped me a lot through the challenges I faced (and still face) on this fascinating area of
+            computing.
+          </p>
+          <p>
+            Talking about the fascinating area of computing, I like to (try to) understand how everything works under
+            the hood, as there is no <i>magic</i> in computing. Just abstractions.
+          </p>
+        </div>
+        <h4>Social links</h4>
+        <ul>
+          <li><a target="blank" href="https://github.com/reueljonathan">Github</a></li>
+          <li><a target="blank" href="https://linkedin.com/in/reueljonathan">Linkedin</a></li>
+      </section>
+
+      <section>
+        <h3 class="bold">Experience</h3>
+        <div>
+          <p>
+            Soon. I'm thinking how to put here in a cool way. =) Until there you can look on 
+            <a target="blank" href="https://linkedin.com/in/reueljonathan">Linkedin</a>.
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <h3 class="bold">Personal Projects</h3>
+
+        <div class="mb-2-em">
+          <h4 class="bold">Portfolio (this website you are right now)</h4>
+          <p>
+            No frameworks, no (com|trans)pilers, just pure html and css. Just following the KISS principle, works well
+            on mobile, and it have a score of 95+ on the Lighthouse. Try it out. :)
+          </p>
+          <p>
+            The palette is inspired by (<i>copied from</i>) the <a href="https://github.com/morhetz/gruvbox"
+            target="blank">gruvbox color scheme</a>.
+          </p>
+        </div>
+
+        <div class="mb-2-em">
+          <h4 class="bold">Functions Game (prototype)</h4>
+          <p>
+            A physics based game prototype that use mathematical functions as controls. It's made with no frameworks,
+            just pure Javascript, HTML5, and CSS3 features.
+          </p>
+          <ul>
+            <li><a href="https://reueljonathan.github.io/functions-game/">Demo</a></li>
+          </ul>
+        </div>
+        <div class="mb-2-em">
+          <h4 class="bold">Minimalist timer</h4>
+          <p>
+            A very simple timer made using javascript and css3 transitions.
+          </p>
+          <ul>
+            <li><a target="blank" href="https://reueljonathan.github.io/timer">Demo</a></li>
+          </ul>
+        </div>
+        <div class="mb-2-em">
+          <h4 class="bold">That memory game</h4>
+          <p>
+            Game prototype to learn the PhaserJS framework. It is based on Simon Says (or Genius) toy, but changes the pattern every round.
+          </p>
+          <ul>
+            <li><a target="blank" href="https://reueljonathan.github.io/that-memory-game">Demo</a></li>
+          </ul>
+        </div>
+        <div class="mb-2-em">
+          <h4 class="bold">SubTItle</h4>
+          <p>
+            It is a repository of subtitle files (.srt) in Portuguese for IT videos spoken in English. It has as primary
+            goal allow Portuguese speaking developers to get used and to learn the English language while consuming good
+            content related with the tools and concepts related with our day-to-day jobs.
+          </p>
+          <ul>
+            <li><a target="blank" href="https://github.com/reueljonathan/SubTItle">Github</a></li>
+          </ul>
+        </div>
+      </section>
+    </div>
+  </body>
+</html>
