Adds code challenge sites profile links

--- a/index.html
+++ b/index.html
@@ -8,14 +8,6 @@
   </head>
   <body>
     <div id="content" class="w-800 border-1px border-black pt-1em ps-2em">
-      <!--
-      <h1>Reuel Jonathan</h1>
-      <h2>Reuel Jonathan</h2>
-      <h3>Reuel Jonathan</h3>
-      <h4>Reuel Jonathan</h4>
-      <h5>Reuel Jonathan</h5>
-      <h6>Reuel Jonathan</h6>
-      -->
       <section id="header" class="mb-2-em">
         <h1>Reuel Jonathan</h1>
         <h2>Software Developer</h2>
@@ -25,7 +17,7 @@
         <h3 class="bold">About</h3>
         <div>
           <p>
-            Hi! My name is Reuel Jonathan, and I am a software developer based on Brazil.
+            Hi! My name is Reuel Jonathan, and I am a brazillian software developer.
           </p>
           <p>
             I started my career at 17 as an apprentice developer. Since there I passed through many projects of
@@ -39,6 +31,19 @@
           <p>
             Talking about the fascinating area of computing, I like to (try to) understand how everything works under
             the hood, as there is no <i>magic</i> in computing. Just abstractions.
+          </p>
+          <p>
+            I also like solving code challenges for fun. You can find me on many of the sites out there:
+
+            <ul>
+                <li><a target="_blank" href="https://www.codewars.com/users/reuel.jonathan">Codewars</a></li>
+                <li><a target="_blank" href="https://leetcode.com/reueljonathan/">LeetCode</a></li>
+                <li><a target="_blank" href="https://app.codesignal.com/profile/reueljonathan">Code Signal</a></li>
+                <li><a target="_blank" href="https://www.beecrowd.com.br/judge/en/profile/133361">Beecrowd</a></li>
+                <li><a target="_blank" href="https://www.hackerrank.com/reueljonathan">HackerRank</a></li>
+                <li><a target="_blank" href="https://codeforces.com/profile/reuel.jonathan">Codeforces</a></li>
+                <li>And Project Euler :D<br><img src="https://projecteuler.net/profile/reuel_jonathan.png"/></li>
+            </ul>
           </p>
         </div>
         <h4>Social links</h4>
